# libsqlite3-hotbundle

./: CREDITS.md  Cargo.toml  README.md  build.rs  upgrade.sh
.cargo/: config.toml
sqlite3/: wasi-helpers.c  wasi-pthread-compat.h
src/: lib.rs
tests/: integration_test.rs  test_encryption.rs
