[package]
name = "libsqlite3-hotbundle"
version = "1.490000.0"
authors = [
    "Kent Ross",
    "The rusqlite developers",
]
edition = "2021"
repository = "https://github.com/mumbleskates/libsqlite3-hotbundle"
description = "bundled libsqlite3 library"
license = "MIT"
build = "build.rs"
keywords = ["sqlite", "ffi"]

[features]
default = []

# sqlite library features
double-quoted-string-literals = []
preupdate_hook = []
unlock_notify = []
session = []
# more build options
wasm32-wasi-vfs = []
with-asan = []

[build-dependencies]
cc = { version = "1.2.4" }

[dev-dependencies]
rusqlite = "0.33.0"
